--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@ai-sdk/vue": "latest",
     "@ai-sdk/openai": "latest",
+    "@ai-sdk/vue": "latest",
     "@nuxt/devtools": "1.3.9",
     "@nuxt/ui-templates": "^1.3.4",
+    "@nuxtjs/i18n": "^8.3.3",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/node": "^18",
     "@vue/reactivity": "^3.4.31",
