--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "vue-router": "4.4.0"
   },
   "version": "0.0.0",
-  "packageManager": "pnpm@9.6.0+sha1.65cd48c20dd329b7f455088b6dd17d4d5b6d02e3"
+  "packageManager": "pnpm@9.6.0+sha1.65cd48c20dd329b7f455088b6dd17d4d5b6d02e3",
+  "dependencies": {
+    "zod": "^3.23.8"
+  }
 }
